Changed the name

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>MyTube Downloader</title>
+    <title>InnerTube Downloader</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png'%}"/>
     <meta name="description" content="Download youtube videos for free">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -41,7 +41,7 @@
   <!-- As a heading -->
   <nav class="navbar navbar-dark bg-danger">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">MyTube Downloader</span>
+      <span class="navbar-brand mb-0 h1">InnerTube Downloader</span>
     </div>
   </nav>
   <br><br>
@@ -70,7 +70,7 @@
 </h6>
 <br>
 <p class="lead">
-    MyTube Downloader is a test project which enables users to download videos.
+    InnerTube Downloader is a test project which enables users to download videos.
   </p>
 </center>
 
